log

mi., 16 de ago. de 2023 22:54:36: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
dea6c12
ju., 17 de ago. de 2023 14:20:20: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
8c6c5a6
ju., 17 de ago. de 2023 14:36:30: 
 exercises.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
5fc6f0c
ju., 17 de ago. de 2023 14:52:23: 
 exercises.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function 'mergeSortedArrays':
exercises.c:88:36: error: 'arr' undeclared (first use in this function); did you mean 'arr2'?
     if(i < size1 && (j >= size2 || arr[i] <= arr2[j])){
                                    ^~~
                                    arr2
exercises.c:88:36: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:90:10: error: expected ';' before '}' token
       i++
          ^
          ;
       }
       ~   
Compilation failed
037f986
ju., 17 de ago. de 2023 14:53:52: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function 'mergeSortedArrays':
exercises.c:90:10: error: expected ';' before '}' token
       i++
          ^
          ;
       }
       ~   
Compilation failed
7a4c00d
ju., 17 de ago. de 2023 14:54:22: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
1774bd8
ju., 17 de ago. de 2023 16:26:25: 
 exercises.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
59bd41b
ju., 17 de ago. de 2023 16:28:42: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function 'checkSorted':
exercises.c:127:14: error: expected ';' before '}' token
     return -1
              ^
              ;
   }else return 0;
   ~           
Compilation failed
90b26ba
ju., 17 de ago. de 2023 16:30:26: 
 exercises.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  0|3
total_score: 40/70
b305bc3
ju., 17 de ago. de 2023 16:35:21: 
 exercises.c | 23 +++++++----------------
 1 file changed, 7 insertions(+), 16 deletions(-)
 tests:  0|3
total_score: 40/70
86d23a2
ju., 17 de ago. de 2023 16:36:10: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function 'checkSorted':
exercises.c:122:12: error: expected '(' before '{' token
   }else if {
            ^
            (
exercises.c:125:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
072dc8c
ju., 17 de ago. de 2023 16:39:25: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|3
total_score: 40/70
ccff525
ju., 17 de ago. de 2023 16:46:20: 
 exercises.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  0|3
total_score: 40/70
e11cdca
